--- a/pages/insurance/home_insurance.html
+++ b/pages/insurance/home_insurance.html
@@ -27,8 +27,9 @@
 
 
 <div class="main">
-    <h2>Housing Alternatives: Pros and Cons</h2>
-    <img src="../../images/housing_pros_cons.png" alt="Housing Pros and Cons" width="750" height="1000"/>
+    <h2>Home Insurance</h2>
+    <p>Below is an overview of what is included and not included with most home insurance policies</p>
+    <img src="../../images/home_insurance.png" alt="Home Insurance" width="1200" height="1000"/>
 </div>
 
 
