--- a/pages/insurance/insurance.html
+++ b/pages/insurance/insurance.html
@@ -14,15 +14,22 @@
 <!-- Side navigation -->
 <!-- <side-menu></side-menu> -->
 <div class="sidenav">
-  <a href="./inswz">About</a>
-  <a href="#services">Finances</a>
-  <button class="dropdown-btn">Dropdown <i class="fa fa-caret-down"></i>   </button>
+  <a href="../../index.html">About</a>
+  <button class="dropdown-btn">Finances <i class="fa fa-caret-down"></i>   </button>
   <div class="dropdown-container">
-    <a href="#">Link 1</a>
-    <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
+    <a href="..\finances\financial_statements.html">Introduction</a>
+    <a href="..\finances\financial_formulas.html">Formulas</a>
   </div>
-  <a href="#contact">Search</a>
+  <a href="..\taxes\taxes.html">Taxes</a>
+  <a href="..\housing\housing.html">Housing</a>
+  <button class="dropdown-btn">Insurance <i class="fa fa-caret-down"></i>   </button>
+  <div class="dropdown-container">
+    <a href="..\insurance\insurance.html">Introduction</a>
+    <a href="..\insurance\home_insurance.html">Housing Insurance</a>
+    <a href="..\insurance\automobile_insurance.html">Automobile Insurance</a>
+    <a href="..\insurance\health_insurance.html">Health Insurance</a>
+    <a href="..\insurance\life_insurance.html">Life Insurance</a>
+  </div>
 </div>
 
 
