--- a/automobile_insurance.html
+++ b/automobile_insurance.html
@@ -3,7 +3,7 @@
 <head>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="../../style.css">
+<link rel="stylesheet" href="style.css">
 <style>
 .content {
     display: block;
@@ -14,21 +14,21 @@
 <!-- Side navigation -->
 <!-- <side-menu></side-menu> -->
 <div class="sidenav">
-  <a href="../../index.html">About</a>
+  <a href="index.html">About</a>
   <button class="dropdown-btn">Finances <i class="fa fa-caret-down"></i>   </button>
   <div class="dropdown-container">
-    <a href="..\finances\financial_statements.html">Introduction</a>
-    <a href="..\finances\financial_formulas.html">Formulas</a>
+    <a href="financial_statements.html">Introduction</a>
+    <a href="financial_formulas.html">Formulas</a>
   </div>
-  <a href="..\taxes\taxes.html">Taxes</a>
-  <a href="..\housing\housing.html">Housing</a>
+  <a href="taxes.html">Taxes</a>
+  <a href="housing.html">Housing</a>
   <button class="dropdown-btn">Insurance <i class="fa fa-caret-down"></i>   </button>
   <div class="dropdown-container">
-    <a href="..\insurance\insurance.html">Introduction</a>
-    <a href="..\insurance\home_insurance.html">Housing Insurance</a>
-    <a href="..\insurance\automobile_insurance.html">Automobile Insurance</a>
-    <a href="..\insurance\health_insurance.html">Health Insurance</a>
-    <a href="..\insurance\life_insurance.html">Life Insurance</a>
+    <a href="insurance.html">Introduction</a>
+    <a href="home_insurance.html">Housing Insurance</a>
+    <a href="automobile_insurance.html">Automobile Insurance</a>
+    <a href="health_insurance.html">Health Insurance</a>
+    <a href="life_insurance.html">Life Insurance</a>
   </div>
 </div>
 
@@ -39,7 +39,7 @@
 
     <button type="button" class="collapsible">Categories</button>
     <div class="content">
-      <img src="../../images/automobile_insurance_breakdown.png" alt="Automobile Insurance" width="1200" height="500"/>
+      <img src="images/automobile_insurance_breakdown.png" alt="Automobile Insurance" width="1200" height="500"/>
     </div>
 
     <button type="button" class="collapsible">Categories Explanations</button>
@@ -69,7 +69,7 @@
         <li>Second number is the limit for each accident</li>
         <li>Third number is the limit for property damage liability</li>
       </ul>
-      <img src="../../images/automobile_insurance_numbers.png" alt="Automobile Insurance Numbers" width="600" height="250"/>
+      <img src="images/automobile_insurance_numbers.png" alt="Automobile Insurance Numbers" width="600" height="250"/>
 
     </div> 
 
@@ -80,7 +80,7 @@
 
 
 <!-- Logic for subsection collapsible and sidebar dropdown-->
-<script src="../../script.js"> </script> 
+<script src="script.js"> </script> 
 
 </body>
 </html> 
