--- a/financial_statements.html
+++ b/financial_statements.html
@@ -3,7 +3,7 @@
 <head>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="../../style.css">
+<link rel="stylesheet" href="style.css">
 <style>
 .content {
     display: block;
@@ -14,21 +14,21 @@
 <!-- Side navigation -->
 <!-- <side-menu></side-menu> -->
 <div class="sidenav">
-  <a href="../../index.html">About</a>
+  <a href="index.html">About</a>
   <button class="dropdown-btn">Finances <i class="fa fa-caret-down"></i>   </button>
   <div class="dropdown-container">
-    <a href="..\finances\financial_statements.html">Introduction</a>
-    <a href="..\finances\financial_formulas.html">Formulas</a>
+    <a href="financial_statements.html">Introduction</a>
+    <a href="financial_formulas.html">Formulas</a>
   </div>
-  <a href="..\taxes\taxes.html">Taxes</a>
-  <a href="..\housing\housing.html">Housing</a>
+  <a href="taxes.html">Taxes</a>
+  <a href="housing.html">Housing</a>
   <button class="dropdown-btn">Insurance <i class="fa fa-caret-down"></i>   </button>
   <div class="dropdown-container">
-    <a href="..\insurance\insurance.html">Introduction</a>
-    <a href="..\insurance\home_insurance.html">Housing Insurance</a>
-    <a href="..\insurance\automobile_insurance.html">Automobile Insurance</a>
-    <a href="..\insurance\health_insurance.html">Health Insurance</a>
-    <a href="..\insurance\life_insurance.html">Life Insurance</a>
+    <a href="insurance.html">Introduction</a>
+    <a href="home_insurance.html">Housing Insurance</a>
+    <a href="automobile_insurance.html">Automobile Insurance</a>
+    <a href="health_insurance.html">Health Insurance</a>
+    <a href="life_insurance.html">Life Insurance</a>
   </div>
 </div>
 
@@ -46,7 +46,7 @@
         </li>
         <li>
             <pre><b>Main activities of Money Management:</b></pre>
-            <img src="../../images/money_management_activities.png" alt="Money Management" width="750" height="600"/>
+            <img src="images/money_management_activities.png" alt="Money Management" width="750" height="600"/>
         </li>
 
         <li style="margin-top:25px;"><b>How long to store financial records?</b></li>
@@ -106,7 +106,7 @@
           </ul>
         </li>
       </ul>   
-      <img src="../../images/financial_statements.png" alt="Financial Statements" width="750" height="600"/>
+      <img src="images/financial_statements.png" alt="Financial Statements" width="750" height="600"/>
     </div>
 
 
@@ -116,7 +116,7 @@
 
 
 <!-- Logic for subsection collapsible and sidebar dropdown-->
-<script src="../../script.js"> </script> 
+<script src="script.js"> </script> 
 
 </body>
 </html> 
