--- a/home_insurance.html
+++ b/home_insurance.html
@@ -3,7 +3,7 @@
 <head>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="../../style.css">
+<link rel="stylesheet" href="style.css">
 <style>
 .content {
     display: block;
@@ -14,21 +14,21 @@
 <!-- Side navigation -->
 <!-- <side-menu></side-menu> -->
 <div class="sidenav">
-  <a href="../../index.html">About</a>
+  <a href="index.html">About</a>
   <button class="dropdown-btn">Finances <i class="fa fa-caret-down"></i>   </button>
   <div class="dropdown-container">
-    <a href="..\finances\financial_statements.html">Introduction</a>
-    <a href="..\finances\financial_formulas.html">Formulas</a>
+    <a href="financial_statements.html">Introduction</a>
+    <a href="financial_formulas.html">Formulas</a>
   </div>
-  <a href="..\taxes\taxes.html">Taxes</a>
-  <a href="..\housing\housing.html">Housing</a>
+  <a href="taxes.html">Taxes</a>
+  <a href="housing.html">Housing</a>
   <button class="dropdown-btn">Insurance <i class="fa fa-caret-down"></i>   </button>
   <div class="dropdown-container">
-    <a href="..\insurance\insurance.html">Introduction</a>
-    <a href="..\insurance\home_insurance.html">Housing Insurance</a>
-    <a href="..\insurance\automobile_insurance.html">Automobile Insurance</a>
-    <a href="..\insurance\health_insurance.html">Health Insurance</a>
-    <a href="..\insurance\life_insurance.html">Life Insurance</a>
+    <a href="insurance.html">Introduction</a>
+    <a href="home_insurance.html">Housing Insurance</a>
+    <a href="automobile_insurance.html">Automobile Insurance</a>
+    <a href="health_insurance.html">Health Insurance</a>
+    <a href="life_insurance.html">Life Insurance</a>
   </div>
 </div>
 
@@ -36,12 +36,12 @@
 <div class="main">
     <h2>Home Insurance</h2>
     <p>Below is an overview of what is included and not included with most home insurance policies</p>
-    <img src="../../images/home_insurance.png" alt="Home Insurance" width="1200" height="1000"/>
+    <img src="images/home_insurance.png" alt="Home Insurance" width="1200" height="1000"/>
 </div>
 
 
 <!-- Logic for subsection collapsible and sidebar dropdown-->
-<script src="../../script.js"> </script> 
+<script src="script.js"> </script> 
 
 </body>
 </html> 
