--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
 <body>
 <!-- Side navigation -->
 <div class="sidenav">
-    <a href="/index.html">About</a>
+    <a href="index.html">About</a>
     <button class="dropdown-btn">Finances <i class="fa fa-caret-down"></i>   </button>
     <div class="dropdown-container">
-      <a href="pages\finances\financial_statements.html">Introduction</a>
-      <a href="pages\finances\financial_formulas.html">Formulas</a>
+      <a href="financial_statements.html">Introduction</a>
+      <a href="financial_formulas.html">Formulas</a>
     </div>
-    <a href="pages\taxes\taxes.html">Taxes</a>
-    <a href="pages\housing\housing.html">Housing</a>
+    <a href="taxes.html">Taxes</a>
+    <a href="housing.html">Housing</a>
     <button class="dropdown-btn">Insurance <i class="fa fa-caret-down"></i>   </button>
     <div class="dropdown-container">
-      <a href="pages\insurance\insurance.html">Introduction</a>
-      <a href="pages\insurance\home_insurance.html">Housing Insurance</a>
-      <a href="pages\insurance\automobile_insurance.html">Automobile Insurance</a>
-      <a href="pages\insurance\health_insurance.html">Health Insurance</a>
-      <a href="pages\insurance\life_insurance.html">Life Insurance</a>
+      <a href="insurance.html">Introduction</a>
+      <a href="home_insurance.html">Housing Insurance</a>
+      <a href="automobile_insurance.html">Automobile Insurance</a>
+      <a href="health_insurance.html">Health Insurance</a>
+      <a href="life_insurance.html">Life Insurance</a>
     </div>
 </div>
 
